--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,24 @@ body {
   grid-template-columns: repeat(2, 1fr);
 }
 
-.static-wrapper img {
+.img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.changable-wrapper {
+  display: grid;
+  justify-content: space-evenly;
+  justify-self: left;
+}
+
+.logo {
+  font-size: 45px;
+  font-weight: bold;
+}
+
+.slogan {
+  font-size: 18px;
 }
 
