--- a/src/components/pages/DetailedComponents/Fields/CheckField/CheckField.module.css
+++ b/src/components/pages/DetailedComponents/Fields/CheckField/CheckField.module.css
@@ -1,11 +1,31 @@
 .checkField {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    font-size: 12px;
+    font-size: 13px;
+    color: #555555;
 }
 
-.checkBoxField {
+.firstInnerCheckField {
     display: flex;
+    flex-direction: row;
     align-items: center;
+    
+}
+
+.firstInnerCheckField div {
+    max-width: max-content;
+}
+
+.secondInnerCheckField {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.checkField a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.checkField a:hover {
+    color: #7e57c2;
 }
