--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-family: 'Courier New', Courier, monospace;
 }
 
@@ -86,3 +86,12 @@ body {
   text-align: center;
   outline: none;
 }
+
+.popup-container {
+  display: grid;
+  grid-template-rows: 100vh;
+  justify-items: center;
+  align-items: center;
+  background-color: #d9d2e9ff;
+}
+
