--- a/src/components/pages/StartPage/_StartPage.css
+++ b/src/components/pages/StartPage/_StartPage.css
@@ -1,8 +1,16 @@
 .buttons {
     display: flex;
     flex-direction: column;
+    width: 50% !important;
+    margin-top: -3%;
 }
-
+.inner-container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 7%;
+}
 .title {
     font-size: 95px;
     letter-spacing: 3px;
@@ -32,8 +40,8 @@
     top: -55px;
     left: 50%;
 }
-.MuiSvgIcon-root {
-    position: relative !important;
-    margin-bottom: 25px !important;
-}
+/*.MuiSvgIcon-root {*/
+/*    position: relative !important;*/
+/*    margin-bottom: 25px !important;*/
+/*}*/
 
