Input field correction, css, checkbox to basic

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 .wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  gap: 10px;
 }
 
 .wrapper div {
@@ -23,34 +23,43 @@ body {
 .changable-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   width: 100%;
+}
+
+.backButton {
+  display: flex;
+  align-items: center;
+  height: 20%;
 }
 
 .pageIntro {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
+  height: 30%;
 }
 
 .logo {
   color: #555555;
-  font-size: 55px;
+  font-size: 70px;
   font-weight: bolder;
 }
 
 .slogan {
   color: #6f6e6e;
-  font-size: 25px;
-}
+  font-size: 30px;
+} 
 
-.informalDivision {
+.informativeDivision {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly; 
+  justify-content: flex-start;
+  height: 50%;
   width: 50% !important;
 }
 
-.informalDivision button {
+.informativeDivision button {
   height: 45px !important
 }
 
@@ -99,4 +108,3 @@ body {
   align-items: center;
   background-color: #d9d2e9ff;
 }
-
