--- a/src/components/pages/Feedback/Feedback.module.css
+++ b/src/components/pages/Feedback/Feedback.module.css
@@ -1,21 +1,21 @@
-.feedbackInformalDivision {
+.feedbackInformativeDivision {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 90% !important;
     height: 50%;
 }
 
-.feedbackInformalDivision button {
+.feedbackInformativeDivision button {
     height: 45px !important;
     width: 45%;
 }
 
-.feedbackInformalDivision textarea {
+.feedbackInformativeDivision textarea {
     max-width : 99%;
-    max-height : 50%;
+    max-height : 40%;
     min-width: 99%;
-    min-height: 50%;
+    min-height: 40%;
 } 
 
 .nameAndEmailField {
