--- a/src/components/pages/StartPage/_StartPage.css
+++ b/src/components/pages/StartPage/_StartPage.css
@@ -1,31 +1,51 @@
 .changable-wrapper-custom {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
 }
 
 .pageIntro-custom {
     display: flex;
-    flex-direction: column;
+    align-items: flex-end;
+    height: 20%;
+}
+
+.changable-wrapper-custom .pageIntro {
+    letter-spacing: 8px !important;
+}
+
+.arrow {
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    height: 15%;
+}
+
+.arrow img {
+    height: 50px;
+    width: 20px;
 }
 
 .buttons {
     display: flex;
     flex-direction: column;
+    align-self: center;
     width: 50% !important;
     margin-top: -3%;
+    height: 50%;
 }
 
-.inner-container {
+footer {
+    color: #999999;
+}
+
+/* .inner-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 7%;
-}
+} */
 
 /* .MuiSvgIcon-root {
     position: relative !important;
