--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-
 body {
+  display: flex;
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
@@ -97,6 +97,7 @@ body {
 
 .popup-container {
   display: grid;
+  grid-template-columns: repeat(6, 1fr);
   grid-template-rows: 100vh;
   justify-items: center;
   align-items: center;
@@ -106,6 +107,11 @@ body {
 .MuiSvgIcon-root {
   margin-right: 10px;
   color: #bbbbbb;
+  height: 40px !important;
+}
+
+.MuiButton-outlinedPrimary {
+  border: 1.5px solid #bbbbbb !important;
 }
 
 .freeSpaceDiv {
