--- a/src/components/pages/Quiz/Quiz.css
+++ b/src/components/pages/Quiz/Quiz.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 
-body {
+/* body {
 
     font-family: 'Courier New', Courier, monospace;
     background-color: #f3f3f3;
@@ -9,31 +9,29 @@ body {
     min-width:800px;
     font-size:20pt;
     font-weight:bold;
-  }
+  } */
   
-  
-
-  .main {
+  /* .main {
     display: grid;
     margin: 20px;
     grid-template-columns: repeat(2, 50%);
     height: 95vh;
-    /* justify-content: space-evenly; */
-  }
+    justify-content: space-evenly;
+  }  */
 
 .question {
   padding: 20px;
   background-color: #d9d2e9ff;
   border: 4px solid #fff;
-
 }
+
 .question pre{
-    margin-top: 100px;
-    padding: 10px;
-    font-size:16pt;
-    background-color: white!important;
-    border: 4px solid #cccccc!important;
-    border-radius: 15px!important;
+  margin-top: 100px;
+  padding: 10px;
+  font-size:16pt;
+  background-color: white!important;
+  border: 4px solid #cccccc!important;
+  border-radius: 15px!important;
 }
 
 .keyword { color: #9900ff; font-weight: bold;}
@@ -41,7 +39,6 @@ body {
 .punctuation, .operator { color: darkblue}
 .plain { color: black}
 .token-line {color: none; padding: 3px;}
-
 
 .answer {
   display:flex;
@@ -57,15 +54,13 @@ body {
   flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
-  
   margin-top: 30px;
-  
 }
+
 .answer > div > input{
   width: 20px;
   height: 20px;
   margin-right: 18px;
-  
 }
 
 .answer > div > label{
@@ -86,8 +81,9 @@ body {
   border-radius: 3px;
   border: 2px solid #7e57c2;
 }
+
 .answer > div > label:after {
-content: '';
+  content: '';
   display: block;
   width: 10px;
   height: 5px;
@@ -101,10 +97,10 @@ content: '';
   top: 12px;
   left: 10px;
 }
+
 .answer > div > input[type="checkbox"]:checked ~ label::before {
   color: #7e57c2;
 }
-
 
 .answer > div > label {
   min-height: 34px;
@@ -115,12 +111,14 @@ content: '';
   cursor: pointer;
   vertical-align: sub;
 }
+
 .answer > div > label span {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+
 .answer > div > input[type="checkbox"]:focus + label::before {
   outline: 0;
 }*/
