--- a/src/components/popups/ResetPasswordPopup/PopupReset.module.css
+++ b/src/components/popups/ResetPasswordPopup/PopupReset.module.css
@@ -1,4 +1,5 @@
 .resetWrapper {
+    grid-column: 2/6;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -7,7 +8,7 @@
     border-radius: 20px;
     background-color: white;
     height: 70%;
-    width: 65%;
+    width: 100%;
     font-family: 'Courier New', Courier, monospace;
 }
 
