--- a/src/components/popups/ResetPasswordPopup/PopupReset.module.css
+++ b/src/components/popups/ResetPasswordPopup/PopupReset.module.css
@@ -12,6 +12,12 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+.resetWrapper a {
+    width: 15% !important;
+    align-self: flex-start;
+    margin: -20px 40px;
+}
+
 .popupWrapper {
     display: flex;
     flex-direction: column;
