--- a/src/components/pages/DetailedComponents/Fields/CheckField/CheckField.module.css
+++ b/src/components/pages/DetailedComponents/Fields/CheckField/CheckField.module.css
@@ -1,10 +1,9 @@
 .checkField {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    height: 5%;
     margin-top: 10px;
-    margin-left: -3px;
-    font-size: 13px;
+    font-size: 14px;
     color: #555555;
 }
 
@@ -14,19 +13,19 @@
 }
 
 .firstInnerCheckField input {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
+    margin: 0 10px 0 0;
 }
 
 .secondInnerCheckField {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .checkField a {
     text-decoration: none;
     color: inherit;
-    width: 51%;
 }
 
 .checkField a:hover {
