--- a/src/components/popups/ResetPasswordPopup/PopupReset.module.css
+++ b/src/components/popups/ResetPasswordPopup/PopupReset.module.css
@@ -13,7 +13,7 @@
 }
 
 .resetWrapper a {
-    width: 15% !important;
+    width: 13% !important;
     align-self: flex-start;
     margin: -20px 40px;
 }
@@ -35,5 +35,5 @@
 }
 
 .popupWrapper input {
-    width: 365px;
+    width: 50%;
 }
