After Reset Popup creation , Popup css correction

--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ body {
   grid-template-rows: 100vh;
   justify-items: center;
   align-items: center;
-  background-color: #d9d2e9ff;
+  background-color: #e2ddee;
 }
 
 .MuiSvgIcon-root {
