--- a/src/components/pages/Quiz/Quiz.css
+++ b/src/components/pages/Quiz/Quiz.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 
 
-body {
+.quizBody {
     font-family: 'Courier New', Courier, monospace;
     background-color: #f3f3f3;
     margin: 0 auto;
