--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-body {
+/*body {
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
-}
+}*/
 
 .wrapper {
   display: grid;
