--- a/src/components/pages/StartPage/_StartPage.css
+++ b/src/components/pages/StartPage/_StartPage.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border: 5px solid #E2DDEE;
 }
 
 .innerWrapper {
