--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
 
 .img {
   object-fit: cover;
-  height: 99vh;
+  height: 98vh;
   width: 100%;
   background-color: #e2ddee;
 }
@@ -23,8 +23,12 @@ body {
   flex-direction: column;
   justify-content: space-between;
   padding-left: 50px;
+  border: 5px solid #E2DDEE;
 }
+.static-wrapper{
+  border: 5px solid white;
 
+}
 .pageIntro {
   display: flex;
   flex-direction: column;
