--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ body {
 
 }
 
-
 .wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -25,8 +24,9 @@ body {
   padding-left: 50px;
   border: 5px solid #E2DDEE;
 }
+
 .static-wrapper{
-  border: 5px solid white;
+  border: 5px solid #ffffff;
 
 }
 .pageIntro {
