compliting css of checkfield

--- a/src/components/pages/DetailedComponents/Fields/CheckField/CheckField.module.css
+++ b/src/components/pages/DetailedComponents/Fields/CheckField/CheckField.module.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
+    margin-bottom: -16px;
     font-size: 14px;
     color: #555555;
 }
