--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,51 @@ body {
   margin-right: 10px;
   color: #bbbbbb;
 }
+
+.fromAbove{
+  animation: fromAbove 1000ms; 
+}
+
+.fromBelow{
+  animation: fromBelow 1000ms; 
+}
+
+.fromLeft{
+  animation: fromLeft 1000ms; 
+}
+
+.fromRight{
+  animation: fromRight 1000ms; 
+}
+.zoomOut{
+  animation: zoomOut 1000ms;
+}
+
+@keyframes fromAbove{
+  0%{ opacity: 0; transform: translateY(-50%);}
+  100%{ opacity: 1; transform: translateY(0);}
+}
+
+@keyframes fromBelow{
+  0%{ opacity: 0; transform: translateY(50%);}
+  100%{ opacity: 1; transform: translateY(0);}
+}
+
+@keyframes fromLeft{
+  0%{ opacity: 0; transform: translateX(-50%);}
+  100%{ opacity: 1; transform: translateX(0);}
+}
+
+@keyframes fromRight{
+  0%{ opacity: 0; transform: translateX(50%);}
+  100%{ opacity: 1; transform: translateX(0);}
+}
+
+@keyframes zoomOut{
+  0%{ opacity: 0; transform: scale(0);}
+  100%{ opacity: 1; transform: scale(1);}
+}
+
+
+
+
