--- a/src/components/pages/Quiz/Quiz.css
+++ b/src/components/pages/Quiz/Quiz.css
@@ -113,16 +113,16 @@
 
 .btns > button, input[type='submit'],input[type='button'] {
   background-color: white;
-  border: 1px solid #bbbbbb;
-  border-radius: 10px;
+  border: 1.5px solid #bbbbbb;
+  border-radius: 5px;
   padding: 7px 5px;
   width: 25%;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 15pt;
+  font-size: 19px;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+ /* box-shadow: 2px 2px 2px rgba(0,0,0,.5);*/
   animation: rotateBtn 1000ms; 
   outline: none;
   
