--- a/src/App.css
+++ b/src/App.css
@@ -102,11 +102,14 @@ body {
 
 
 .popup-container {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 100vh;
-  justify-items: center;
+  /* display: grid;
+ grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 100vh;*/
+  display:flex;
+  justify-content: center;
   align-items: center;
+  margin: 0 auto;
+  height: 100vh;
   background-color: #e2ddee;
 }
 
@@ -134,6 +137,10 @@ body {
   animation: zoomOut 1000ms;
 }
 
+.zoomIn{
+  animation: zoomIn 1000ms;
+}
+
 @keyframes fromAbove{
   0%{ opacity: 0; transform: translateY(-50%);}
   100%{ opacity: 1; transform: translateY(0);}
@@ -156,6 +163,10 @@ body {
 
 @keyframes zoomOut{
   0%{ opacity: 0; transform: scale(0);}
+  100%{ opacity: 1; transform: scale(1);}
+}
+@keyframes zoomIn{
+  0%{ opacity: 0; transform: scale(1.5);}
   100%{ opacity: 1; transform: scale(1);}
 }
 
