ResetPassword email validation and loader adding

--- a/src/components/popups/ResetPasswordPopup/AfterResetPopup/AfterResetPopup.module.css
+++ b/src/components/popups/ResetPasswordPopup/AfterResetPopup/AfterResetPopup.module.css
@@ -1,16 +1,20 @@
 .afterResetWrapper {
-    grid-column: 2/6;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    width: 100%;
+    margin: 0 270px;
     border: 2px solid #bbbbbb;
     border-radius: 20px;
     background-color: white;
     height: 70%;
-    width: 100%;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
+}
+
+.afterResetTextWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .afterResetWrapper h1 {
@@ -22,5 +26,6 @@
 }
 
 .afterResetWrapper a {
+    height: 48px !important;
     width: 13% !important;
 }
