--- a/src/components/popups/ResetPasswordPopup/PopupReset.module.css
+++ b/src/components/popups/ResetPasswordPopup/PopupReset.module.css
@@ -1,51 +1,48 @@
 .resetWrapper {
-    grid-column: 2/6;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    display: grid;
+    width: 100%;
+    margin: 0 270px;
     border: 2px solid #bbbbbb;
     border-radius: 20px;
     background-color: white;
     height: 70%;
-    width: 100%;
     font-family: 'Courier New', Courier, monospace;
 }
 
 .resetWrapper a {
     width: 13% !important;
     align-self: flex-start;
-    margin: -20px 40px;
+    margin: 20px;
 }
 
 .popupWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70%;
 }
 
 .popupWrapper input {
   height: 45px;
-  color: #555555 !important;
-  font-size: 19px !important;
-  letter-spacing: 0.02857em !important;
-  font-family: 'Courier New', Courier, monospace !important;
-  border: 1.5px solid  #bbbbbb !important;
-  border-radius: 5px !important;
-  background-color: white !important;
-  text-align: center !important;
-  outline: none !important;
+  width: 50%;
+  color: #555555;
+  font-size: 19px;
+  letter-spacing: 0.02857em;
+  font-family: 'Courier New', Courier, monospace;
+  border: 1.5px solid  #bbbbbb;
+  border-radius: 5px;
+  background-color: white;
+  text-align: center;
+  outline: none;
 }
 
 .popupWrapper input:hover {
-    border-color: #7e57c2 !important;
-    color: #7e57c2 !important;
-    cursor: pointer !important;
-  }
+    border-color: #7e57c2;
+    color: #7e57c2;
+    cursor: pointer;
+}
   
 .popupWrapper input:hover::placeholder {
-    color: #7e57c2 !important;
+    color: #7e57c2;
 }
 
 .popupWrapper h1 {
@@ -55,8 +52,4 @@
 .popupWrapper h3 {
     text-align: center;
     color: #a78dd4ff;
-}
-
-.popupWrapper input {
-    width: 50%;
 }
