rout dublication cuting

--- a/src/components/popups/Popup.module.css
+++ b/src/components/popups/Popup.module.css
@@ -43,6 +43,7 @@
     width: 170px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 19px;
+    color: #555555;
     outline: none;
     margin-top: 25px;
 }
