--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -37,7 +37,7 @@
     padding: 7px 5px;
     width: 150px;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 15pt;
+    font-size: 19px;
     color: #555555;
     box-shadow: 2px 2px 2px #d1d1d1;
     outline: none;
@@ -91,14 +91,14 @@
     min-height: 800px;				
 }
 
-.addForm{
+.addForm {
 
     display:flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.row{
+.row {
     display:flex;
     flex-direction: row;
     justify-content: center;
@@ -109,24 +109,12 @@
     outline: none;
 }
 
-.questions{
-    width: 70%;
-    font-size: 20px;
-}
-
-.questionItem {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 3px;
-}
-
 .pointer {
     cursor: pointer;
 }
 
 .red{
-    color:red
+    color: red;
 }
 
 @keyframes slideInFromLeftAdm {
