--- a/src/components/pages/DetailedComponents/Buttons/CustomButton/_CustomButton.css
+++ b/src/components/pages/DetailedComponents/Buttons/CustomButton/_CustomButton.css
@@ -20,3 +20,34 @@
 .MuiButton-text {
     padding: 0 0 !important;
 }
+
+
+
+
+.small.entering{
+
+    animation: small 1000ms;
+}
+.small.exiting{
+
+    animation: small 1000ms;
+}
+
+
+
+@keyframes  small{
+
+  0%{
+
+     
+    transform:rotateY(90deg)
+  }
+
+
+  100%{
+
+     
+    transform:rotateY(180deg)
+  }
+
+}
