--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -35,6 +35,7 @@
     border: 1px solid #fff;
     border-radius: 5px;
     padding: 7px 5px;
+    height: 45px;
     width: 150px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 19px;
