--- a/src/components/pages/Admin/Questions.module.css
+++ b/src/components/pages/Admin/Questions.module.css
@@ -53,6 +53,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    border: 1.5px solid #bbbbbb;
+    border: 1.5px solid #fff;
     border-radius: 5px;
 }
