--- a/src/components/pages/DetailedComponents/Buttons/CustomButton/_CustomButton.css
+++ b/src/components/pages/DetailedComponents/Buttons/CustomButton/_CustomButton.css
@@ -26,11 +26,11 @@
 
 .small.entering{
 
-    animation: small 1000ms;
+    animation: small 500ms;
 }
 .small.exiting{
-
-    animation: small 1000ms;
+    
+    animation: small 500ms;
 }
 
 
@@ -39,15 +39,21 @@
 
   0%{
 
-     
-    transform:rotateY(90deg)
+   
+    transform:rotateY(0deg)
   }
+  50%{
+
+   
+    transform:rotateY(180deg)
+  }
+
 
 
   100%{
 
-     
-    transform:rotateY(180deg)
+    
+    transform:rotateY(0deg)
   }
 
 }
