--- a/src/components/pages/Admin/DetailedCompotents/AnswersAndCode.module.css
+++ b/src/components/pages/Admin/DetailedCompotents/AnswersAndCode.module.css
@@ -13,6 +13,7 @@
 }
 
 .answer input {
+    width: 90%;
     color: #555555;
     font-family: 'Courier New', Courier, monospace;
     font-size: 17px;
@@ -24,8 +25,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    margin-right: 20px;
+    margin-right: 5px;
 }
 
 textarea {
