--- a/src/components/pages/Admin/DetailedCompotents/ChangePsw.css
+++ b/src/components/pages/Admin/DetailedCompotents/ChangePsw.css
@@ -1,23 +1,22 @@
 .container {
-
   width: 100%;
   height: 280px;
   margin-top: 80px;
   font-family: 'Courier New', Courier, monospace;
-
   }
-.label{
+
+.label {
  font-size: 30px;
   width: 220px;
   display: inline-block;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bolder;
-
 }
-button{
+
+button {
   color:white;
   font-size: 20px;
-  width: 200px;
+  /* width: 200px; */
   height: 50px;
   border: none;
   border-radius: 10px;
@@ -25,11 +24,9 @@ button{
   text-shadow: 2px 2px 6px #F5F5F5;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bolder;
-  
 }
-.cngpasswordlabel{
 
-
+.cngpasswordlabel {
   width: 40%;
   height: 60px;
   margin-top: 40px;
@@ -38,23 +35,20 @@ button{
   cursor: none;
   font-size: larger;
   margin-left: 100px;
- 
-  }
+}
 
-form button{
-
-  width: 40%;
+form button {
+  /* width: 40%; */
   height: 60px;
   margin-top: 40px;
   border-radius: 10px;
   border:1px solid purple;
   color: white;
- margin-left: 320px;
+  margin-left: 320px;
   font-size: 30px;
   text-shadow: 2px 2px 6px #F5F5F5;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bolder;
-
 }
 
 
