--- a/src/components/pages/Admin/Question/Questions.module.css
+++ b/src/components/pages/Admin/Question/Questions.module.css
@@ -3,7 +3,6 @@
     font-size: 20px;
     padding: 0;
     margin: 0;
-    overflow-y: scroll;
 }
 
 .questionItem {
@@ -20,7 +19,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 5px;
+    margin: 5px 5px 10px 5px;
 }
 
 .inputWrapper {
@@ -36,8 +35,31 @@
     font-size: 19px;
     font-weight: bold;
     color: #555555;
-    margin-left: 10px;
     outline: none;
+}
+
+.questionItemLi select {
+    width: 130px;
+    padding: 5px;
+    margin-right: 10px;
+    border: 1.5px solid #bbbbbb;
+    border-radius: 5px;
+    color: #757575;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
+    letter-spacing: 0.02857em;
+    outline: none;
+}
+
+select:hover {
+    border-color: #555555;
+    color: #555555;
+    font-weight: bold;
+}
+
+select .selected {
+    background-color: #dedede;
+
 }
 
 .tick {
@@ -47,12 +69,12 @@
     border: none;
     background-color: transparent;
     outline: none;
+    margin-left: 10px;
 }
 
 .answersWrapper {
     display: flex;
     flex-direction: column;
     width: 100%;
-    border: 1.5px solid #fff;
     border-radius: 5px;
 }
