user panel functionality

--- a/src/components/pages/Quiz/Quiz.css
+++ b/src/components/pages/Quiz/Quiz.css
@@ -104,7 +104,7 @@
   justify-content: space-around;
 }
 
-.btns > button, input[type='submit'],input[type='button'] {
+.btns > button, .btns input[type='submit'], .finishBtn {
   background-color: white;
   border: 1.5px solid #bbbbbb;
   border-radius: 5px;
