--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -11,6 +11,10 @@
 
 }
 
+.header h4 {
+    color: #fff;
+}
+
 .themeSelect{
     width:200px;
     padding: 15px;
@@ -29,6 +33,7 @@
     font-size: 50px;
     font-weight: bolder;
     text-shadow: 3px 3px 8px #000;
+    text-decoration: none;
   }
 
 .logout {
@@ -47,14 +52,14 @@
 .sidebar-left{
     position:absolute;
     left:0; 
-    top:92px; 
-    bottom: 0;
+    top:102px; 
+    /*bottom: 0;*/
     width: 250px;
     padding: 0 20px;
     animation: 800ms ease-out 0s 1 slideInFromLeftAdm;
     display: flex;
     flex-direction: column;
-    
+    min-height:800px;
 
 }
 
@@ -63,9 +68,10 @@
     left:290px; 
     top:102px; 
     right:0;
-    bottom:0;
+   /* bottom:0;*/
     padding:50px;
     animation: 800ms ease-out 0s 1 slideInFromRightAdm;
+    min-height:800px;
 }
 
 .footer{
@@ -76,27 +82,83 @@
     background-color: lightblue;
 }
 
-.sidebar-left, .mainAdmin{
-    min-height: 800px;				
-}
 
 
 
 .addForm{
+    width:600px;
+    min-width: 600px;
+    font-size: 18px;
+    margin: 0 auto;
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: 5px 5px 25px rgba(0,0,0,.5); 
+    
 
+ }
+ .addForm input, select, textarea{
+    outline: none;
+    padding: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+    font-size: 17px;
+    border: none;
+    border-radius: 7px;
+ }
+ .addForm span{
+     padding-left: 10px;
+     font-weight: bold;
+
+ }
+
+
+
+
+.addForm h3{
+    text-align:center;
+}
+
+.addForm form{
     display:flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
+    flex-grow: 1;
+    width:100%;
+}
+.addForm input[type="number"] {
+    width: 70px;
+}
+.addForm input[type="submit"] {
+    border: 2px solid #000;
+    font-weight: bold;
+    margin: auto;
+    padding: 10px;
+}
+.addForm input[type="reset"] {
+    font-style: normal!important;
+    font-weight: bold;
+    font-size: 20pt!important;
+    background: none;
+    color: green;
+    margin-top: 3px;
+}
+.wideRow, .addForm textarea {
+    width: 100%;
 }
 .row{
     display:flex;
+    width:99%;
     flex-direction: row;
-    justify-content: center;
-    margin: 3px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px;
 }
 
-.row input, textarea {
-    outline: none;
+.centerAdm { 
+    text-align: center; 
+    width:100%;
+    
 }
 
 .questions{
@@ -112,11 +174,100 @@
 
 }
 
+.quizLi {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 7px;
+
+}
+
+.getLinkBtn{
+  outline: none;
+  padding: 10px;
+  border: none;
+  background: none;
+  border-radius: 15px;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.5); 
+
+}
+
 .pointer {
     cursor: pointer;
 }
 .red{
     color:red
+}
+
+.adminModalForm {
+  display: flex;
+  flex-direction:column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 25px;
+}
+.adminModalForm input[type='text'] {
+  outline: none;
+  padding: 10px;
+  border-radius: 7px;
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  font-size: 17px;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+  background-color: rgba(0,0,0,.02);
+  border: none;
+  width: 100%;
+  
+
+}
+.adminModalForm input[type='submit'] {
+
+  outline: none;
+  background: none;
+  border: none;
+  padding: 7px 20px;
+  color: green;
+  font-size: 15pt;
+  border-radius: 7px;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+  background-color: rgba(0,0,0,.02);
+
+}
+
+.adminModalForm select {
+
+  outline: none;
+  background: none;
+  border: none;
+  width: 100%;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+  padding: 10px;
+  text-align-last: center;
+  background-color: rgba(0,0,0,.02);
+  
+}
+
+.adminModalForm input[type="number"] {
+  outline: none;
+  margin: 10px;
+  
+  padding: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  font-size: 17px;
+  border: none;
+  border-radius: 7px;
+  text-align: center;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+  width: 100%;
+  background-color: rgba(0,0,0,.02);
+
+}
+
+.createCancelDiv{
+  display: flex;
+  margin-top: 25px;
+  align-items: center;
 }
 
 @keyframes slideInFromLeftAdm {
@@ -158,6 +309,11 @@ animation: spin 1s linear infinite;
 .rotate-exit.rotate-exit-active{
     opacity:1;
 }
+
+.successAnim {
+  animation: successAnim 800ms forwards;
+}
+
 @keyframes spin {
   
     100% {
@@ -165,3 +321,104 @@ animation: spin 1s linear infinite;
     }
   }
   
+  /*.questionItem-exit-active {
+    animation: questionItem 800ms;
+  }*/
+  
+  .questionItem-enter-active {
+    animation: questionItem 800ms ease-in alternate-reverse;
+  }
+  
+  @keyframes questionItem {
+    0% {
+      opacity: 1;
+    }
+  
+    30% {
+      opacity: .7;
+      transform: translateX(30px);
+    }
+  
+    100% {
+      opacity: 0;
+      transform: translateX(-200px);
+    }
+  }
+
+  @keyframes successAnim {
+ 
+    0% {
+      opacity: .7;
+      transform: scale(.5);
+    }
+  
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  .quizesTableDiv{
+    display: grid;
+
+  }
+
+  .copyLink{
+
+    display: flex;
+    flex-direction:row;
+    justify-content: space-evenly;
+    align-items: center;
+  
+  }
+  
+  .linkToCopyInpt{
+    border: none;
+    color: transparent;
+    z-index: 0;
+  }
+  .quizTable, .linkToCopyInpt{
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .quizTable { 
+    width: 100%;
+    box-shadow: 15px 15px 25px #ccc;
+    border-collapse: collapse;
+    padding: 10px; 
+    text-align:center; 
+    background-color: white;
+    z-index: 1;
+    font-size: 15pt;
+
+  }
+  .quizTable td, th { 
+    border:none;
+    border-bottom: 1px solid #ccc; 
+    vertical-align: 0rem;
+    
+    text-align:center; 
+  }
+  .quizTable  th { 
+     padding: 15px;
+  }
+  .quizTable tr:first-child {
+
+     /*background: #ccc;*/
+     font-size: 19px; 
+    
+    }
+    .quizTable tr:last-child td{
+      vertical-align: bottom!important;
+      /*background: #ccc;*/
+      height: 50px;
+      font-size: 17px; 
+      font-weight: bold;
+     
+     }
+
+    .tablePaging{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
