settings dropdown / crspndmnt of inner components

--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -13,15 +13,6 @@
     animation: 800ms ease-out 0s 1 slideInFromAboveAdm;
 }
 
-.themeSelect {
-    width:200px;
-    padding: 15px;
-    font-size: 19px;
-    border: 1px solid #bbbbbb;
-    border-radius: 10px;
-    outline: none;
-}
-
 .logoAdmin {
     color: #fff;
     font-size: 50px;
@@ -163,3 +154,69 @@ animation: spin 1s linear infinite;
     transform: rotatey(360deg);
   }
 }
+
+.settingsWrapper {
+  margin-top: 3px;
+  border: 1.5px solid white;
+  border-radius: 5px;
+}
+
+.settingsButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: 1.5px solid #fff;
+  border-radius: 5px;
+  outline: none;
+  font-size: 19px;
+  font-family: 'Courier New', Courier, monospace;
+  text-shadow: none;
+  margin-top: 50px;
+}
+
+.settingsContent {
+  display: flex;
+  flex-direction: column;
+  height: min-content;
+  padding: 2px;
+}
+
+.themeSelect {
+  background-color: transparent;
+  width:100%;
+  padding: 10px;
+  font-size: 19px;
+  font-family: 'Courier New', Courier, monospace;
+  color: #fff;
+  text-align: center;
+  text-align-last: center;
+  border: 1px solid white;
+  border-radius: 3px;
+  outline: none;
+}
+
+.themeSelect:hover {
+  background-color: transparent;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+
+.settingsContent button {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid white;
+  text-shadow: none;
+  border-radius: 3px;
+  outline: none;
+  font-weight: normal;
+  margin-top: 2px;
+}
+
+.settingsContent button:hover {
+  font-weight: bold;
+  color: #555555;
+  cursor: pointer;
+}
+
