--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -342,6 +342,7 @@ animation: spin 1s linear infinite;
 }
 
 .settingsButton {
+  height: 48px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -352,6 +353,8 @@ animation: spin 1s linear infinite;
   outline: none;
   font-size: 19px;
   font-family: 'Courier New', Courier, monospace;
+  color: #fff;
+  font-weight: bold;
   text-shadow: none;
   margin-top: 50px;
 }
@@ -372,6 +375,7 @@ animation: spin 1s linear infinite;
   color: #fff;
   text-align: center;
   text-align-last: center;
+  font-style: normal !important;
   border: 1px solid white;
   border-radius: 3px;
   outline: none;
@@ -385,11 +389,15 @@ animation: spin 1s linear infinite;
 
 .settingsContent button {
   width: 100%;
+  height: 48px;
   background-color: transparent;
   border: 1px solid white;
   text-shadow: none;
   border-radius: 3px;
   outline: none;
+  color: #fff;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 19px;
   font-weight: normal;
   margin-top: 2px;
 }
